Remove a whole bunch of boiler plate logging and ensure parallelelisation is working

--- a/modules/integraBoostService/src/main/resources/application.properties
+++ b/modules/integraBoostService/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-logging.level.org.springframework.web= ERROR
-logging.level.com.integraboost= DEBUG
-logging.level.org.hibernate= ERROR
+#reduces log spam
+spring.main.banner-mode=OFF
+
+#see https://stackoverflow.com/questions/30549489/what-is-this-spring-jpa-open-in-view-true-property-in-spring-boot
+spring.jpa.open-in-view=false
