--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,9 @@
 org.gradle.parallel=true
+
+# see issue with intellij here: https://youtrack.jetbrains.com/issue/IDEA-262702/Grade-reload-fails-with-enabled-Gradle-parallelism -> trying with 2023.3.Beta to see if issues resolve
+gradle.tooling.models.parallel.fetch=true
+
+org.gradle.daemon=true
+
+# handy for troubleshooting fs issues caused by gradle/intellij
+org.gradle.vfs.verbose=false
