--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -4,7 +4,9 @@
 
 org.gradle.jvmargs=-Xmx2G
 
+# org.gradle.caching.debug=true
 org.gradle.caching=true
+
 org.gradle.parallel=true
 # see issue with intellij here: https://youtrack.jetbrains.com/issue/IDEA-262702/Grade-reload-fails-with-enabled-Gradle-parallelism -> trying with 2023.3.Beta to see if issues resolve
 gradle.tooling.models.parallel.fetch=true
@@ -13,3 +15,9 @@ org.gradle.daemon=true
 
 # handy for troubleshooting fs issues caused by gradle/intellij
 org.gradle.vfs.verbose=false
+
+org.gradle.configuration-cache=true
+org.gradle.configureondemand=true
+org.gradle.warning.mode=all
+
+systemProp.scan.capture-task-input-files=true
