Add in basic task snapshot

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx2G
 
 # org.gradle.caching.debug=true
-org.gradle.caching=true
+#org.gradle.caching=true
 
 org.gradle.parallel=true
 # see issue with intellij here: https://youtrack.jetbrains.com/issue/IDEA-262702/Grade-reload-fails-with-enabled-Gradle-parallelism -> trying with 2023.3.Beta to see if issues resolve
@@ -12,8 +12,8 @@ org.gradle.daemon=true
 # handy for troubleshooting fs issues caused by gradle/intellij
 org.gradle.vfs.verbose=false
 
-org.gradle.configuration-cache=true
-org.gradle.configureondemand=true
-org.gradle.warning.mode=all
+#org.gradle.configuration-cache=true
+#org.gradle.configureondemand=true
+#org.gradle.warning.mode=all
 
 systemProp.scan.capture-task-input-files=true
