Revert "Add capability conflict avoidance plugin"
This reverts commit bffab3ac31cf423888f3c57b060c387c148c9341.

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -7,6 +7,8 @@ org.gradle.jvmargs=-Xmx2G
 # see issue with intellij here: https://youtrack.jetbrains.com/issue/IDEA-262702/Grade-reload-fails-with-enabled-Gradle-parallelism -> trying with 2023.3.Beta to see if issues resolve
 gradle.tooling.models.parallel.fetch=true
 
+#org.gradle.daemon=true
+
 # handy for troubleshooting fs issues caused by gradle/intellij
 org.gradle.vfs.verbose=false
 
