Restructure to get settings files to apply properly

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -1,19 +1,8 @@
-org.gradle.jvmargs=-Xmx2G
-
-# org.gradle.caching.debug=true
-#org.gradle.caching=true
-
-#org.gradle.parallel=true
-# see issue with intellij here: https://youtrack.jetbrains.com/issue/IDEA-262702/Grade-reload-fails-with-enabled-Gradle-parallelism -> trying with 2023.3.Beta to see if issues resolve
-gradle.tooling.models.parallel.fetch=true
-
-#org.gradle.daemon=true
-
-# handy for troubleshooting fs issues caused by gradle/intellij
-org.gradle.vfs.verbose=false
-
+## Configure the Grade Daemon - memory and same encoding on all machines
+#org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8 -XX:MaxMetaspaceSize=384m -XX:+HeapDumpOnOutOfMemoryError
+#
+## activate Gradle configuration cache - instantly start builds that ran before, full parellilsm
 #org.gradle.configuration-cache=true
-#org.gradle.configureondemand=true
-#org.gradle.warning.mode=all
-
-#systemProp.scan.capture-task-input-files=true
+#
+## activate Gradle build cache - switch between branches/commits without rebuilding every time
+#org.gradle.caching=true
