--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -1,7 +1,7 @@
 # Configure the Grade Daemon - memory and same encoding on all machines
 org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8 -Xlog:gc*:gc.log -XX:+HeapDumpOnOutOfMemoryError
 
-# activate Gradle configuration cache - instantly start builds that ran before, full parellilsm
+## activate Gradle configuration cache - instantly start builds that ran before, full parallelism
 org.gradle.configuration-cache=true
 
 # activate Gradle build cache - switch between branches/commits without rebuilding every time
