--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -1,5 +1,5 @@
 # Configure the Grade Daemon - memory and same encoding on all machines
-org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8 -Xlog:gc*:gc.log -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8 -Xlog:gc*:gc.log -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC
 
 ## activate Gradle configuration cache - instantly start builds that ran before, full parallelism
 org.gradle.configuration-cache=true
