--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -1,8 +1,8 @@
 # Configure the Grade Daemon - memory and same encoding on all machines
-org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8 -Xlog:gc*:gc.log -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC
+#org.gradle.jvmargs=-Xmx2g -Xextended-compiler-checks
 
 ## activate Gradle configuration cache - instantly start builds that ran before, full parallelism
-org.gradle.configuration-cache=true
+#org.gradle.configuration-cache=true
 
 # activate Gradle build cache - switch between branches/commits without rebuilding every time
-org.gradle.caching=true
+#org.gradle.caching=true
