Fix deprecation warning for test suites

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -7,3 +7,6 @@ org.gradle.configuration-cache=true
 # activate Gradle build cache - switch between branches/commits without rebuilding every time
 org.gradle.caching=true
 org.gradle.parallel=true
+
+# show the individual deprecation warnings and determine if they come from our own scripts or plugins
+org.gradle.warning.mode=all
