Remove unnecessary jvm target compatibility check, and add in comments for how to enable k2 compiler

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -10,3 +10,7 @@ org.gradle.parallel=true
 
 # show the individual deprecation warnings and determine if they come from our own scripts or plugins
 org.gradle.warning.mode=all
+
+# uncomment to use the k2 compiler
+#kotlin.experimental.tryK2=true
+#kapt.use.k2=true
