--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -11,6 +11,10 @@ org.gradle.parallel=true
 # show the individual deprecation warnings and determine if they come from our own scripts or plugins
 org.gradle.warning.mode=all
 
+# Gives us explicit control of exactly where we can use the kotlin std-lib library,
+# rather than implicit assumption of it being used everywhere
+kotlin.stdlib.default.dependency=false
+
 # uncomment to use the k2 compiler
 #kotlin.experimental.tryK2=true
 #kapt.use.k2=true
