Add more standardized logging for build

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -3,6 +3,8 @@ org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError
 
 ## activate Gradle configuration cache - instantly start builds that ran before, full parallelism
 org.gradle.configuration-cache=true
+org.gradle.configuration-cache.problems=fail
+org.gradle.configuration-cache.max-problems=0
 
 # activate Gradle build cache - switch between branches/commits without rebuilding every time
 org.gradle.caching=true
