--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx2g -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError
 
 ## activate Gradle configuration cache - instantly start builds that ran before, full parallelism
-org.gradle.configuration-cache=true
+#org.gradle.configuration-cache=true
 org.gradle.configuration-cache.problems=fail
 org.gradle.configuration-cache.max-problems=0
 
@@ -15,7 +15,7 @@ org.gradle.warning.mode=all
 
 # Gives us explicit control of exactly where we can use the kotlin std-lib library,
 # rather than implicit assumption of it being used everywhere
-kotlin.stdlib.default.dependency=false
+#kotlin.stdlib.default.dependency=false
 
 # uncomment to use the k2 compiler
 #kotlin.experimental.tryK2=true
