--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -10,6 +10,9 @@ org.gradle.configuration-cache.max-problems=0
 org.gradle.caching=true
 org.gradle.parallel=true
 
+# see issue with intellij here: https://youtrack.jetbrains.com/issue/IDEA-262702/Grade-reload-fails-with-enabled-Gradle-parallelism -> trying with 2023.3.Beta to see if issues resolve
+gradle.tooling.models.parallel.fetch=true
+
 # show the individual deprecation warnings and determine if they come from our own scripts or plugins
 org.gradle.warning.mode=all
 
