--- a/toolset/jvm/modules/gradle.properties
+++ b/toolset/jvm/modules/gradle.properties
@@ -49,7 +49,7 @@ org.gradle.caching=true
 org.gradle.parallel=true
 
 # See issue with intellij here: https://youtrack.jetbrains.com/issue/IDEA-262702/Grade-reload-fails-with-enabled-Gradle-parallelism -> trying with 2023.3.Beta to see if issues resolve
-gradle.tooling.models.parallel.fetch=true
+# gradle.tooling.models.parallel.fetch=true
 
 # Enables output capturing during build scan. We may want to turn these off for any sensitive data/leaking. See: https://docs.gradle.com/enterprise/gradle-plugin/#capturing_build_and_test_outputs
 systemProp.scan.capture-build-logging=true
