Remove unnecessary gradle enterprise config through main settings plugin

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -54,6 +54,10 @@ org.gradle.parallel=true
 # Enables output capturing during build scan. We may want to turn these off for any sensitive data/leaking. See: https://docs.gradle.com/enterprise/gradle-plugin/#capturing_build_and_test_outputs
 systemProp.scan.capture-build-logging=true
 systemProp.scan.capture-test-logging=true
+# Setting this to true ensures that uploading is done as a part of the build. If you want the build to finish sooner, and
+# also are not in an environment that terminates/exits before the upload can complete, set it to true.
+# True value is currently being used to us an 'overall' more accurate build time
+systemProp.scan.uploadInBackground=false
 
 # Configure the Grade Daemon - memory and same encoding on all machines
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=384m -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError
