--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -40,7 +40,7 @@ org.gradle.daemon=true
                                                                               ###
                                                                               ###
 
-org.gradle.configureondemand=true
+org.gradle.configureondemand=false
 
 # Activate Gradle build cache - switch between branches/commits without rebuilding every time
 org.gradle.caching=true
