WIP - Configuration Avoidance Discovery - Fix some of the my kotlin plugin tasks not using lazily evaluated things properly

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -60,6 +60,7 @@ systemProp.scan.capture-test-logging=true
 systemProp.scan.uploadInBackground=false
 
 # Configure the Grade Daemon - memory and same encoding on all machines
+# TODO STILL CLEANUP KOTLIN PLUGIN -------> kotlinDaemonJvmArgs = listOf("-Xmx486m", "-Xms256m", "-XX:+UseParallelGC")
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=384m -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError
 
 # Enables file system watching. This is on by default since Gradle 7, but being declarative makes it more visible what the full build is doing
