WIP - Configuration Avoidance Discovery - Set configuration cache to false so that we dont get inconsistent results from intellij test runners

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -13,7 +13,33 @@
                                                                 ###
 # Gradle.useLogger does not work with this value set to true + adds to dependency resolution time in configuration stage when storing configuration cache entry
 # TODO Ideally we want this on in the future, because it gives us full parallelism and instantly start builds that have run before
-org.gradle.configuration-cache=true
+# Currently, when this is enabled, attempting to run any gradle tasks inside of intellij cause issues.
+# Note: HOWEVER, normal tasks such as ./gradlew test (when this option is true, AND is run through intellij side bar)
+# have significant observed speed improvements. See below:
+#
+# Rough observed speeds:
+#
+#   './gradlew test'
+#
+#   Configuration cache: false
+#   When running task for first time
+#       Through command line: 1-3s
+#       Through intellij: 800-900ms
+#   When running task after configuration cache been stored (normally third time after a change)
+#       Through command line: 1s
+#       Through intellij: 600-750ms
+#
+#   Configuration cache: true
+#   When running task for first time
+#       Through command line: 1s
+#       Through intellij: 700-800ms
+#    When running task after configuration cache been stored (normally third time after a change)
+#       Through command line: 450-550ms
+#       Through intellij: 90-150ms  <------ Have no idea what intellij is doing here, but whatever speed improvements
+#                                           they are making, we should try and bring in eventually.
+#
+# SEE ABOVE - DO NOT SET THIS TO TRUE UNLESS THE BUG WITH INTELLIJ HAS BEEN FIXED https://github.com/gradle/gradle/issues/13480
+org.gradle.configuration-cache=false
 org.gradle.configuration-cache.problems=fail
 org.gradle.configuration-cache.max-problems=0
                                                                 ###
