WIP - Configuration Avoidance Discovery - Add aliasing to every module for plugins

--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -21,4 +21,8 @@ gson = "2.10.1"
 jakartaActivationApi = "1.2.2"
 javaxActivation = "1.1.1"
 
+[plugins]
+kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+
+
 
