--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -1,30 +1,27 @@
 [versions]
-# BOM's/frequently updated
+## BOM's/frequently updated
 kotlin = "1.9.20"
 kotlinDsl = "4.2.1"
-junit = "5.10.1"
-springBootDependencies = "3.2.0"
-talaiot = "2.0.3"
-
-# External plugins
-dependencyAnalysisGradlePlugin = "1.29.0"
-foojayResolver = "0.7.0"
-gradleEnterpriseGradlePlugin = "3.16.2"
-commonCustomUserDataGradlePlugin = "1.12.1"
-
-# Standard deps
-checkerQual = "3.21.4"
-commonsText = "1.11.0"
-commonsIo = "2.5"
-commonsCodec = "1.9"
-errorProneAnnotations = "2.13.1"
-gson = "2.10.1"
-jakartaActivationApi = "1.2.2"
-javaxActivation = "1.1.1"
-
+#junit = "5.10.1"
+#springBootDependencies = "3.2.0"
+#talaiot = "2.0.3"
+#
+## External plugins
+#dependencyAnalysisGradlePlugin = "1.29.0"
+#foojayResolver = "0.7.0"
+#gradleEnterpriseGradlePlugin = "3.16.2"
+#commonCustomUserDataGradlePlugin = "1.12.1"
+#
+## Standard deps
+#checkerQual = "3.21.4"
+#commonsText = "1.11.0"
+#commonsIo = "2.5"
+#commonsCodec = "1.9"
+#errorProneAnnotations = "2.13.1"
+#gson = "2.10.1"
+#jakartaActivationApi = "1.2.2"
+#javaxActivation = "1.1.1"
+#
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlinDsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlinDsl" }
-
-
-
