Add build niceties to ensure UTF-8, output configuration cache warnings, and add standalone plugins project

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -38,8 +38,8 @@
 #       Through intellij: 90-150ms  <------ Have no idea what intellij is doing here, but whatever speed improvements
 #                                           they are making, we should try and bring in eventually.
 #
-# SEE ABOVE - DO NOT SET THIS TO TRUE UNLESS THE BUG WITH INTELLIJ HAS BEEN FIXED https://github.com/gradle/gradle/issues/13480
-org.gradle.configuration-cache=false
+# SEE ABOVE - DO NOT SET THIS TO TRUE UNLESS THE BUG WITH INTELLIJ HAS BEEN FIXED OR YOU WANT TO MANUALLY DISABLE IT EVERY TIME YOU NEED DEPS https://github.com/gradle/gradle/issues/13480
+org.gradle.configuration-cache=true
 org.gradle.configuration-cache.problems=fail
 org.gradle.configuration-cache.max-problems=0
                                                                 ###
