--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 ## BOM's/frequently updated
 kotlin = "1.9.20"
 kotlinDsl = "4.2.1"
-#junit = "5.10.1"
+junit = "5.10.1"
 #springBootDependencies = "3.2.0"
 #talaiot = "2.0.3"
 #
