Remove now unnecessary build services workaround. Add project safe accessors, and move some of the newly added deps to the toml file

--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -2,7 +2,9 @@
 ## BOM's/frequently updated
 kotlin = "1.9.22"
 kotlinDsl = "4.3.0"
+gradle = "8.7-rc-3"
 junit = "5.10.1"
+slf4j = "2.0.12"
 #springBootDependencies = "3.2.0"
 #talaiot = "2.0.3"
 #
