--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -39,7 +39,7 @@
 #                                           they are making, we should try and bring in eventually.
 #
 # SEE ABOVE - DO NOT SET THIS TO TRUE UNLESS THE BUG WITH INTELLIJ HAS BEEN FIXED OR YOU WANT TO MANUALLY DISABLE IT EVERY TIME YOU NEED DEPS https://github.com/gradle/gradle/issues/13480
-org.gradle.configuration-cache=true
+org.gradle.configuration-cache=false
 org.gradle.configuration-cache.problems=fail
 org.gradle.configuration-cache.max-problems=0
 ###
@@ -103,6 +103,8 @@ kotlin.stdlib.default.dependency=true
 ## Uncomment this + the k2 part of commons plugin to use the k2 compiler
 #kotlin.experimental.tryK2=true
 #kapt.use.k2=true
+
+org.gradle.testkit.debug=true
 
 
 ###
