Add task inputs and outputs for buildAllComposite and create an example plugin to consolidate understanding/learnings

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -104,6 +104,10 @@ kotlin.stdlib.default.dependency=true
 #kotlin.experimental.tryK2=true
 #kapt.use.k2=true
 
+# Gives us coloured output which includes tasks and the order in which they've run in
+org.gradle.console=verbose
+
+# Allows us to debug any of the functional tests that are run
 org.gradle.testkit.debug=true
 
 
