--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -108,7 +108,7 @@ kotlin.stdlib.default.dependency=true
 org.gradle.console=verbose
 
 # Allows us to debug any of the functional tests that are run
-org.gradle.testkit.debug=true
+#org.gradle.testkit.debug=true
 
 
 ###
