--- a/toolset/jvm/composite-build/platforms/gradle.properties
+++ b/toolset/jvm/composite-build/platforms/gradle.properties
@@ -112,7 +112,7 @@ kotlin.stdlib.default.dependency=true
 #kapt.use.k2=true
 
 # Gives us coloured output which includes tasks and the order in which they've run in
-org.gradle.console=verbose
+org.gradle.console=rich
 
 # Allows us to debug any of the functional tests that are run
 #org.gradle.testkit.debug=true
