--- a/toolset/jvm/composite-build/standalone-plugins/standalone-plugin-one/src/functionalTest/resources/junit-platform.properties
+++ b/toolset/jvm/composite-build/standalone-plugins/standalone-plugin-one/src/functionalTest/resources/junit-platform.properties
@@ -1,5 +1,5 @@
 # tests appear to be faster when using false here
-junit.jupiter.execution.parallel.enabled = true
-junit.jupiter.execution.parallel.config.strategy = dynamic
-junit.jupiter.execution.parallel.mode.default = concurrent
-junit.jupiter.execution.parallel.mode.classes.default = concurrent
+junit.jupiter.execution.parallel.enabled = false
+#junit.jupiter.execution.parallel.config.strategy = dynamic
+#junit.jupiter.execution.parallel.mode.default = concurrent
+#junit.jupiter.execution.parallel.mode.classes.default = concurrent
