--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -98,7 +98,7 @@ org.gradle.warning.mode=all
 # Gives us explicit control of exactly where we can use the kotlin std-lib library,
 # rather than implicit assumption of it being used everywhere
 # Setting it to false seems to have unintended side effects where we need to apply `kotlin-dsl` false for some reason?
-kotlin.stdlib.default.dependency=true
+kotlin.stdlib.default.dependency=false
 
 ## Uncomment this + the k2 part of commons plugin to use the k2 compiler
 #kotlin.experimental.tryK2=true
