WIP - Add basic jvm/kotlin args, with a few configuration tweaks

--- a/toolset/jvm/test-composite-build/gradle.properties
+++ b/toolset/jvm/test-composite-build/gradle.properties
@@ -1,3 +1,8 @@
 
 org.gradle.warning.mode=all
-org.gradle.console=rich
+org.gradle.console=verbose
+
+org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+kotlin.daemon.useFallbackStrategy=false
+kotlin.build.report.output=file
