--- a/toolset/jvm/root-project/gradle.properties
+++ b/toolset/jvm/root-project/gradle.properties
@@ -1,8 +1,8 @@
-org.gradle.configuration-cache=false
+org.gradle.configuration-cache=true
 org.gradle.configuration-cache.problems=fail
 org.gradle.configuration-cache.max-problems=0
 org.gradle.daemon=true
-org.gradle.configureondemand=false
+org.gradle.configureondemand=true
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=384m -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError
@@ -10,3 +10,6 @@ org.gradle.warning.mode=all
 kotlin.stdlib.default.dependency=false
 org.gradle.console=rich
 org.gradle.testkit.debug=true
+
+kotlin.build.report.output=file
+kotlin.compiler.preciseCompilationResultsBackup=true
