--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -2,7 +2,8 @@
 org.gradle.daemon=true
 org.gradle.caching=true
 org.gradle.parallel=true
-org.gradle.configureondemand=false
+org.gradle.configureondemand=true
+org.gradle.configuration-cache=true
 
 org.gradle.configuration-cache.problems=fail
 org.gradle.configuration-cache.max-problems=0
