--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -1,15 +1,12 @@
 [versions]
 ## BOM's/frequently updated
-kotlin = "1.9.23"
-coroutines = "1.8.0"
-slf4j = "2.0.12"
-gradle = "8.7"
+kotlin = "1.9.22"
+kotlinDsl = "4.3.0"
 junit = "5.10.1"
-commonsIo = "2.16.0"
 
 [plugins]
-kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-#kotlinDsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlinDsl" }
+#kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+#kotlinDsl = { id = "org.gradle.kotlin:gradle-kotlin-dsl-plugins", version.ref = "kotlinDsl" }
 
 #kotlinDsl = "4.3.1"
 
