--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 kotlin = "1.9.22"
 kotlinDsl = "4.3.0"
 junit = "5.10.1"
+junitPlatform = "1.10.1"
 
 [plugins]
 #kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
