Add in an example of the holy grail of feedback, which showcases the possibilities of not running tests which were unrelated to some arbitrary condition

--- a/toolset/build-logic/gradle.properties
+++ b/toolset/build-logic/gradle.properties
@@ -12,4 +12,9 @@ org.gradle.warning.mode=all
 org.gradle.console=rich
 org.gradle.testkit.debug=true
 
+kotlin.compiler.suppressExperimentalICOptimizationsWarning=true
+kotlin.compiler.preciseCompilationResultsBackup=true
+
+kotlin.build.report.output=file
+kotlin.incremental.useClasspathSnapshot=true
 kotlin.stdlib.default.dependency=false
