--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -12,4 +12,9 @@ org.gradle.warning.mode=all
 org.gradle.console=rich
 org.gradle.testkit.debug=true
 
+kotlin.compiler.suppressExperimentalICOptimizationsWarning=true
+kotlin.compiler.preciseCompilationResultsBackup=true
+
+kotlin.build.report.output=file
+kotlin.incremental.useClasspathSnapshot=true
 kotlin.stdlib.default.dependency=false
