Add in ksp-processor which outputs basic log file of source/test classes ASTs, align versions and move settings to custom plugin

--- a/toolset/jvm/.gitignore
+++ b/toolset/jvm/.gitignore
@@ -6,7 +6,11 @@ build
 out
 
 # Ignore intellij
-.idea/
+**/.idea/
 
 # Ignore the local published repos if you don't have them
 local-repo
+
+# Ignore incremental kotlin folder
+.kotlin
+
