--- a/toolset/build-logic/gradle/libs.versions.toml
+++ b/toolset/build-logic/gradle/libs.versions.toml
@@ -1,9 +1,8 @@
 [versions]
 kotlin = "2.0.0"
-kotlinDsl = "4.3.0"
 junit = "5.10.1"
 junitPlatform = "1.10.1"
 
 [plugins]
-#kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-#kotlinDsl = { id = "org.gradle.kotlin:gradle-kotlin-dsl-plugins", version.ref = "kotlinDsl" }
+kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+#kotlinDsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlinDsl" }
