--- a/toolset/build-logic/gradle/libs.versions.toml
+++ b/toolset/build-logic/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 kotlin = "2.0.0"
 junit = "5.10.1"
 junitPlatform = "1.10.1"
+coroutines = "1.8.1"
 
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
