--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ junit = "5.10.1"
 junitPlatform = "1.10.1"
 kspSymbolProcessing = "2.0.0-1.0.22"
 squareUpJavaPoet = "1.12.1"
+coroutines = "1.8.1"
 
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
