Add example of build cache to showcase the utility this could have

--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ junitPlatform = "1.10.1"
 kspSymbolProcessing = "2.0.0-1.0.22"
 squareUpJavaPoet = "1.12.1"
 coroutines = "1.8.1"
+gradleEnterprise = "3.17.5"
 
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
