--- a/toolset/build-logic/gradle/libs.versions.toml
+++ b/toolset/build-logic/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ kotlin = "2.0.0"
 junit = "5.10.1"
 junitPlatform = "1.10.1"
 coroutines = "1.8.1"
+gradleEnterprise = "3.17.5"
 
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
