--- a/toolset/build-logic/gradle/wrapper/gradle-wrapper.properties
+++ b/toolset/build-logic/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,7 @@
-#Mon Jul 08 00:24:51 AEST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.8-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-all.zip
+networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
