--- a/toolset/build-logic-meta/gradle/libs.versions.toml
+++ b/toolset/build-logic-meta/gradle/libs.versions.toml
@@ -5,8 +5,10 @@ junit = "5.10.1"
 junitPlatform = "1.10.1"
 coroutines = "1.8.1"
 gradleEnterprise = "3.17.5"
+composePlugin = "1.7.0-alpha02"
 
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 #kotlinDsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlinDsl" }
+jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "composePlugin" }
 
