Move multiplatform app to plugins

--- a/toolset/build-logic/gradle/libs.versions.toml
+++ b/toolset/build-logic/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ junitPlatform = "1.10.1"
 coroutines = "1.8.1"
 gradleEnterprise = "3.17.5"
 composePlugin = "1.7.0-alpha02"
+sqldelight = "2.0.1"
 
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
