--- a/toolset/build-logic/gradle/libs.versions.toml
+++ b/toolset/build-logic/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 kotlin = "2.0.0"
-kotlinDsl = "4.3.1"
+kotlinDsl = "4.4.0"
 junit = "5.10.1"
 junitPlatform = "1.10.1"
 coroutines = "1.8.1"
@@ -10,6 +10,6 @@ sqldelight = "2.0.1"
 
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-#kotlinDsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlinDsl" }
+kotlinDsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlinDsl" }
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "composePlugin" }
 
