Fix provider at configuration warning for build-ui

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -12,9 +12,10 @@ org.gradle.warning.mode=all
 org.gradle.console=verbose
 org.gradle.testkit.debug=true
 
-kotlin.compiler.suppressExperimentalICOptimizationsWarning=true
+kotlin.compiler.suppressExperimentalICOptimizationsWarning=false
 kotlin.compiler.preciseCompilationResultsBackup=true
-
-kotlin.build.report.output=file
 kotlin.incremental.useClasspathSnapshot=true
-kotlin.stdlib.default.dependency=false
+
+kotlin.build.report.verbose=true
+kotlin.build.report.metrics=true
+kotlin.build.report.output=file
