--- a/toolset/build-logic-meta/gradle/libs.versions.toml
+++ b/toolset/build-logic-meta/gradle/libs.versions.toml
@@ -10,5 +10,8 @@ composePlugin = "1.7.0-alpha02"
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlinDsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlinDsl" }
+
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "composePlugin" }
+kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
