--- a/toolset/build-logic/gradle/libs.versions.toml
+++ b/toolset/build-logic/gradle/libs.versions.toml
@@ -4,12 +4,15 @@ kotlinDsl = "4.4.0"
 junit = "5.10.1"
 junitPlatform = "1.10.1"
 coroutines = "1.8.1"
-gradleEnterprise = "3.17.5"
+gradleEnterprise = "3.17.6"
 composePlugin = "1.7.0-alpha02"
 sqldelight = "2.0.1"
 
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlinDsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlinDsl" }
+
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "composePlugin" }
+kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
