Add in first part of nice UI

--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ declarative-dsl = "8.10-20240723003427+0000"
 sqldelight = "2.0.1"
 ktor = "2.3.9"
 kotlinCompose = "2.0.10"
+palette = "1.0.0"
 
 
 [plugins]
