--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -22,12 +22,12 @@ palette = "1.0.0"
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlinDsl = { id = "org.gradle.kotlin.kotlin-dsl", version.ref = "kotlinDsl" }
-kotlinComposePlugin = { id = "org.jetbrains.kotlin.plugin.compose", version = "kotlin" }
 
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "composePlugin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
+kotlinComposePlugin = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlinCompose" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
 
@@ -55,4 +55,3 @@ materialKolor = { module = "com.materialkolor:material-kolor", version = "1.4.4"
 slf4j-api = { module = "org.slf4j:slf4j-api", version = "2.0.12" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version = "1.5.3" }
 junit-junit = { module = "junit:junit", version = "4.13.2" }
-
