--- a/toolset/build-logic-meta/gradle/libs.versions.toml
+++ b/toolset/build-logic-meta/gradle/libs.versions.toml
@@ -3,9 +3,21 @@ kotlin = "2.0.0"
 kotlinDsl = "4.4.0"
 junit = "5.10.1"
 junitPlatform = "1.10.1"
+kspSymbolProcessing = "2.0.0-1.0.22"
+squareUpJavaPoet = "1.12.1"
 coroutines = "1.8.1"
 gradleEnterprise = "3.17.6"
 composePlugin = "1.7.0-alpha02"
+kotlinx-coroutines = "1.7.3"
+kotlinx-serialization = "1.6.2"
+decompose = "3.0.0-alpha07"
+gradle-tooling = "8.10-20240723003427+0000"
+declarative-dsl = "8.10-20240723003427+0000"
+sqldelight = "2.0.1"
+ktor = "2.3.9"
+kotlinCompose = "2.0.10"
+palette = "1.0.0"
+
 
 [plugins]
 kotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -15,3 +27,31 @@ jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "composePlugin"
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
+kotlinComposePlugin = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlinCompose" }
+kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
+
+[libraries]
+kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "kotlin" }
+kotlinx-coroutines-bom = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-bom", version.ref = "kotlinx-coroutines" }
+kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing" }
+kotlinx-serialization-bom = { module = "org.jetbrains.kotlinx:kotlinx-serialization-bom", version.ref = "kotlinx-serialization" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json" }
+sqldelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqldelight" }
+sqldelight-extensions-coroutines = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqldelight" }
+sqldelight-driver-sqlite = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqldelight" }
+ktor-bom = { module = "io.ktor:ktor-bom", version.ref = "ktor" }
+ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp" }
+ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json" }
+decompose-decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
+decompose-compose = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
+essenty-lifecycle-coroutines = { module = "com.arkivanov.essenty:lifecycle-coroutines", version = "1.3.0" }
+gradle-tooling-api = { module = "org.gradle:gradle-tooling-api", version.ref = "gradle-tooling" }
+gradle-declarative-dsl-core = { module = "org.gradle:gradle-declarative-dsl-core", version.ref = "declarative-dsl" }
+gradle-declarative-dsl-evaluator = { module = "org.gradle:gradle-declarative-dsl-evaluator", version.ref = "declarative-dsl" }
+gradle-declarative-dsl-tooling-models = { module = "org.gradle:gradle-declarative-dsl-tooling-models", version.ref = "declarative-dsl" }
+material3WindowSizeClassMultiplatform = { module = "dev.chrisbanes.material3:material3-window-size-class-multiplatform", version = "0.3.1" }
+materialKolor = { module = "com.materialkolor:material-kolor", version = "1.4.4" }
+slf4j-api = { module = "org.slf4j:slf4j-api", version = "2.0.12" }
+logback-classic = { module = "ch.qos.logback:logback-classic", version = "1.5.3" }
+junit-junit = { module = "junit:junit", version = "4.13.2" }
