Remove KSP to enable isolated projects

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -18,7 +18,11 @@ kotlin.incremental.useClasspathSnapshot=true
 
 kotlin.build.report.verbose=true
 kotlin.build.report.metrics=true
-kotlin.build.report.output=file
+
+# DO NOT USE - This brings in problems with isolated projects
+#kotlin.build.report.output=file
 
 org.gradle.java.home=/home/gardo/.sdkman/candidates/java/current
 org.gradle.home=GRADLE_USER_HOME
+
+org.gradle.unsafe.isolated-projects=true
