Try and fix dependency resolution timings by fixing the platform at root

--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ kotlinCompose = "2.0.10"
 palette = "1.0.0"
 androidxLifecycleViewmodel = "2.8.0"
 composeRuntimeLiveData = "1.6.8"
+fooJayResolver = "0.8.0"
 
 
 [plugins]
