Add in more scripts and fix remote build cache

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.daemon=true
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
-#org.gradle.configuration-cache=true
+org.gradle.configuration-cache=true
 
 org.gradle.configuration-cache.problems=fail
 org.gradle.configuration-cache.max-problems=0
@@ -25,4 +25,4 @@ kotlin.build.report.metrics=true
 org.gradle.java.home=/home/gardo/.sdkman/candidates/java/current
 org.gradle.home=GRADLE_USER_HOME
 
-#org.gradle.unsafe.isolated-projects=true
+org.gradle.unsafe.isolated-projects=true
