--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -22,7 +22,9 @@ kotlin.build.report.metrics=true
 # DO NOT USE - This brings in problems with isolated projects
 #kotlin.build.report.output=file
 
-org.gradle.java.home=/home/gardo/.sdkman/candidates/java/current
 org.gradle.home=GRADLE_USER_HOME
 
 org.gradle.unsafe.isolated-projects=true
+
+# Fixes https://youtrack.jetbrains.com/issue/KT-69330/KotlinCompile-friendPathsSet-property-is-racy-due-causing-build-cache-invalidation
+kotlin.build.archivesTaskOutputAsFriendModule=false
