--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 kotlin = "2.0.20"
 kotlinDsl = "4.5.0"
+byteBuddy = "1.15.1"
 junit = "5.10.1"
 junitPlatform = "1.10.1"
 kspSymbolProcessing = "2.0.0-1.0.22"
