Add what appears to be semi functioning incremental test task. To figure out why other tasks are triggering rebuilds

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -28,3 +28,5 @@ org.gradle.unsafe.isolated-projects=true
 
 # Fixes https://youtrack.jetbrains.com/issue/KT-69330/KotlinCompile-friendPathsSet-property-is-racy-due-causing-build-cache-invalidation
 kotlin.build.archivesTaskOutputAsFriendModule=false
+
+#systemProp.http.nonProxyHosts=0.0.0.0.*|0.0.0.1.*|127.0.0.1|localhost
