--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ palette = "1.0.0"
 androidxLifecycleViewmodel = "2.8.0"
 composeRuntimeLiveData = "1.6.8"
 fooJayResolver = "0.8.0"
+develocity = "3.18.1"
 
 
 [plugins]
