Add incremental hashing of each class file

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.daemon=true
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
-org.gradle.configuration-cache=true
+org.gradle.configuration-cache=false
 
 org.gradle.configuration-cache.problems=fail
 org.gradle.configuration-cache.max-problems=0
@@ -24,7 +24,7 @@ kotlin.build.report.metrics=true
 
 org.gradle.home=GRADLE_USER_HOME
 
-org.gradle.unsafe.isolated-projects=true
+org.gradle.unsafe.isolated-projects=false
 
 # Fixes https://youtrack.jetbrains.com/issue/KT-69330/KotlinCompile-friendPathsSet-property-is-racy-due-causing-build-cache-invalidation
 kotlin.build.archivesTaskOutputAsFriendModule=false
