Add compute instructions task for task execution digest that we can use for incremental feedback

--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ androidxLifecycleViewmodel = "2.8.0"
 composeRuntimeLiveData = "1.6.8"
 fooJayResolver = "0.8.0"
 develocity = "3.18.1"
+guava = "33.3.1-jre"
 
 
 [plugins]
