--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.configuration-cache=false
 
 org.gradle.configuration-cache.problems=fail
 org.gradle.configuration-cache.max-problems=0
-org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=384m -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=384m -Dfile.encoding=UTF-8 -XX:+HeapDumpOnOutOfMemoryError -Djdk.instrument.traceUsage
 org.gradle.warning.mode=all
 org.gradle.console=verbose
 org.gradle.testkit.debug=true
