Add Minify plugin for external deps, consolidate builds

--- a/toolset/build-logic/.gitignore
+++ b/toolset/build-logic/.gitignore
@@ -5,7 +5,7 @@
 build
 out
 
-# Ignore intellij
+# Ignore all .idea directories in any subfolder
 **/.idea/
 
 # Ignore the local published repos if you don't have them
