--- a/toolset/jvm/.gitignore
+++ b/toolset/jvm/.gitignore
@@ -5,7 +5,7 @@
 build
 out
 
-# Ignore intellij
+# Ignore all .idea directories in any subfolder
 **/.idea/
 
 # Ignore the local published repos if you don't have them
