Change version back to java 21, fix configuration cache for groovy and reproducible archives sometimes failing

--- a/toolset/jvm/jvm-composite-build/jvm/gradle.properties
+++ b/toolset/jvm/jvm-composite-build/jvm/gradle.properties
@@ -3,8 +3,8 @@
 org.gradle.jvmargs=-Xmx3100m -XX:MaxMetaspaceSize=768m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -Dorg.gradle.internal.problems.report.enabled=true
 org.gradle.parallel=true
 org.gradle.caching=true
-org.gradle.configuration-cache=false
-org.gradle.configuration-cache.parallel=false
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.parallel=true
 systemProp.org.gradle.classloaderscope.strict=true
 systemProp.gradle.publish.skip.namespace.check=true
 # Kotlin DSL settings
@@ -27,3 +27,6 @@ defaultPerformanceBaselines=8.12-commit-17c9cfaa6ce
 
 # Skip dependency analysis for tests
 systemProp.dependency.analysis.test.analysis=false
+
+org.gradle.warning.mode=all
+org.gradle.console=verbose
