--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -1,2 +1,6 @@
 org.gradle.warning.mode=all
 org.gradle.console=verbose
+#org.gradle.caching=true
+#org.gradle.parallel=true
+#org.gradle.configureondemand=true
+#org.gradle.configuration-cache=true
