Add custom plugin extension for root build

--- a/toolset/jvm/gradle.properties
+++ b/toolset/jvm/gradle.properties
@@ -3,4 +3,4 @@ org.gradle.console=verbose
 #org.gradle.caching=true
 #org.gradle.parallel=true
 #org.gradle.configureondemand=true
-#org.gradle.configuration-cache=true
+org.gradle.configuration-cache=false
