Add in basic first iteration of desktop application

--- a/toolset/jvm/gradle/wrapper/gradle-wrapper.properties
+++ b/toolset/jvm/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,6 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+# Please update the version in $rootDir/gradle/libs.versions.toml when updating this version to keep things in sync
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.12.1-all.zip
 networkTimeout=10000
 validateDistributionUrl=true
