--- a/toolset/jvm/gradle/libs.versions.toml
+++ b/toolset/jvm/gradle/libs.versions.toml
@@ -1,8 +1,20 @@
 [versions]
+gradle = "8.12.1"
 java = "21"
 kotlin = "2.0.21"
 kotlinDsl = "5.1.2"
 junit = "5.12.1"
 junitPlatform = "1.12.1"
 coroutines = "1.10.1"
+composePlugin = "1.7.0-alpha02"
+materialKolor = "1.4.4"
 groupVersion = "0.1.local-dev"
+
+[plugins]
+kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "composePlugin" }
+composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+
+[libraries]
+materialKolor = { module = "com.materialkolor:material-kolor", version.ref = "materialKolor" }
+gradleToolingApi = { module = "org.gradle:gradle-tooling-api", version.ref = "gradle" }
